--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,400;0,700;1,200;1,400&display=swap');
+
 :root {
   --pink: #FFDDDB;
   --black: #151515;
@@ -6,9 +8,22 @@
   --orange: #E49B25;
 }
 
+body {
+  font-family: 'Chivo', Helvetica, Arial, sans-serif;
+  color: var(--black);
+}
+
+.projects-main {
+  display: flex;
+  flex-direction: column;
+
+  padding: 1em;
+  margin: 2em;
+}
+
 .project-card {
   border: 3px solid var(--black);
-  width: 700px;
+  width: 800px;
   margin: 2em;
   padding: 5px;
 
@@ -22,20 +37,24 @@
   width: 0;
   height: 0;
   margin-top: -8px;
-  border-top: 50px solid var(--orange);
-  border-left: 78px solid transparent;
-  border-bottom: 20px solid transparent;
+  border-top: 80px solid var(--orange);
+  border-left: 88px solid transparent;
   grid-area: 1 / 10 / 2 / 11;
 }
 
 .pc-title {
-  grid-area: 1 / 1 / 2 / 5;
+  grid-area: 1 / 1 / 2 / 10;
 
   margin: 1em;
+  font-weight: 400;
+  font-size: 28px;
 }
 
 .pc-desc {
-  grid-area: 3 / 2 / 9 / 11;
+  grid-area: 2 / 2 / 9 / 11;
+  background-color: #ffffff8f;
+  padding: 5px;
+  font-size: 30px;
 }
 
 .pc-link {
@@ -44,7 +63,7 @@
 
 .pc-img {
   z-index: -1;
-  grid-area: 1 / 7 / 11 / 11;
+  grid-area: 1 / 6 / 11 / 11;
   background-color: var(--pink);
   margin: 5px;
 }
@@ -98,7 +117,6 @@
   margin-top: -13px;
   border-top: 70px solid var(--blue);
   border-left: 73px solid transparent;
-  border-bottom: 20px solid transparent;
   grid-area: 1 / 10 / 2 / 11;
 }
 
