--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,61 @@ body {
 
 /* SPLASH */
 
+.splash-nav {
+  position: absolute;
+  top: 250px;
+  left: 750px;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.splash-nav a {
+  color: var(--orange);
+  text-decoration: underline;
+  text-decoration-color: var(--blue);
+  text-shadow: var(--pink) 1px 0 1px;
+}
+
+.splash-nav a:hover {
+  color: var(--blue);
+  text-decoration-color: var(--orange);
+}
+
+.splash-nav-line {
+  border-bottom: 2px solid var(--blue);
+  z-index: -3;
+  position: absolute;
+  top: 63.5px;
+  right: 100px;
+  width: 500px;
+}
+
+.splash-nav-circle {
+  height: 200px;
+  width: 200px;
+  z-index: -2;
+  background-color: var(--orange);
+  border-radius: 100%;
+  top: -34px;
+  right: -46px;
+  position: absolute;
+}
+
 .splash-circle-big {
   height: 350px;
   width: 350px;
   padding: 20px;
   background-color: var(--pink);
+  border: 2px solid var(--blue);
   border-radius: 100%;
   position: absolute;
   top: 100px;
   left: 250px;
+}
+
+.splash-letter {
+  color: var(--blue);
 }
 
 .splash-circle-big img {
