--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,19 @@ body {
 }
 
 /* SPLASH */
+.splash-backdrop {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -5;
+}
+
+.splash-bg-gif {
+  opacity: 20%;
+  animation: move 10s infinite;
+}
 
 .splash-nav {
   position: absolute;
@@ -244,5 +257,17 @@ body {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(80%);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
